fix gap on page and fix bnt width

--- a/src/components/Services/Services.module.scss
+++ b/src/components/Services/Services.module.scss
@@ -115,7 +115,7 @@
   }
 
   &__btn {
-    width: 40%;
+    width: 50%;
     text-decoration: none;
     text-align: center;
     padding-block: 7px;
